--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </section>
         <section class="container">
             <div class="row justify-content-center">
-                <div class="col-6">
+                <div class="col-6 text-center">
                     <a name="features"></a>
                     <h1>Download the extension</h1>
                     <p class="text-black-50">We've got more browsers in the pipeline. Please do let us know if you've
@@ -180,38 +180,37 @@
                 </div>
             </div>
 
-            <div class="cards row justify-content-center text-center">
-                <div class="card col-2 me-3" style="width: 18rem;">
-                    <img src="images/logo-chrome.svg" class="w-75 p-5 ms-auto me-auto" alt="...">
-                    <!--<div class="card-body">-->
+            <div class="cards-custom text-center d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-start">
+                
+                <div class="col-3 me-3 pt-5 pb-3 mb-3 border rounded shadow-sm" style="width: 15rem;">
+                    <img src="images/logo-chrome.svg" class="mb-3" alt="...">
                     <div class="">
-                        <h5 class="card-title">Add to Chrome</h5>
-                        <p class="card-text">Minimum version 6.2</p>
-                        <a href="#" class="btn btn-primary">Add & Install Extension</a>
+                        <h5 class="mt-3">Add to Chrome</h5>
+                        <p class="mb-3 text-black-50">Minimum version 62</p>
+                        <img class="w-100 mb-3" src="images/bg-dots.svg" alt="dots line">
+                        <a href="#" class="btn btn-primary w-80">Add & Install Extension</a>
                     </div>
                 </div>
 
-                <!--
-                <div class="card col-3" style="width: 18rem;">
-                    <img src="images/logo-firefox.svg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="col-3 me-3 pt-5 pb-3 mb-3 border rounded shadow-sm" style="width: 15rem;">
+                    <img src="images/logo-firefox.svg" class="mb-3" alt="...">
+                    <div class="">
+                        <h5 class="mt-3">Add to Firefox</h5>
+                        <p class="mb-3 text-black-50">Minimum version 55</p>
+                        <img class="w-100 mb-3" src="images/bg-dots.svg" alt="dots line">
+                        <a href="#" class="btn btn-primary w-80">Add & Install Extension</a>
                     </div>
                 </div>
 
-                <div class="card col-3" style="width: 18rem;">
-                    <img src="images/logo-opera.svg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="col-3 me-3 pt-5 pb-3 mb-3 border rounded shadow-sm" style="width: 15rem;">
+                    <img src="images/logo-opera.svg" class="mb-3" alt="...">
+                    <div class="">
+                        <h5 class="mt-3">Add to Opera</h5>
+                        <p class="mb-3 text-black-50">Minimum version 46</p>
+                        <img class="w-100 mb-3" src="images/bg-dots.svg" alt="dots line">
+                        <a href="#" class="btn btn-primary w-80">Add & Install Extension</a>
                     </div>
                 </div>
-                -->
 
             </div>
 
