--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
 <body>
     <main>
+        <!-- HEADER -->
         <header class="container">
             <div class="row">
-                <nav class="navbar navbar-expand-lg navbar-light ">
-                    <div class="container-fluid align-items-center">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="container align-items-center">
                         <a class="navbar-brand" href="#"><img src="images/logo-bookmark.svg" alt="BOOKMARK LOGO"
                                 class=""></a>
                         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
@@ -29,17 +30,17 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto me-lg-0 ms-lg-auto mb-2 mb-lg-0 align-items-center">
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark " aria-current="page" href="#features">FEATURES</a>
+                                    <a class="nav-link text-dark ps-3 pe-3" aria-current="page" href="#features">FEATURES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" aria-current="page" href="#">PRICING</a>
+                                    <a class="nav-link text-dark ps-3 pe-3" aria-current="page" href="#">PRICING</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" aria-current="page" href="#">CONTACT</a>
+                                    <a class="nav-link text-dark ps-3 pe-3" aria-current="page" href="#">CONTACT</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" aria-current="page" href="#"><button type="button"
-                                            class="btn btn-danger">LOGIN</button></a>
+                                    <a class="nav-link text-dark ps-3 pe-3" aria-current="page" href="#"><button type="button"
+                                            class="btn btn-danger shadow-sm">LOGIN</button></a>
                                 </li>
                             </ul>
                         </div>
@@ -47,9 +48,9 @@
                 </nav>
             </div>
         </header>
-
+        <!-- FRONT PAGE -->
         <section class="container mt-5">
-            <div class="row align-items-center">
+            <div class="row justify-content-center align-items-center">
                 <section class="col-12 col-lg-6 order-2 order-lg-1 mb-3 text-center text-lg-start">
                     <h1>A Simple Bookmark Manager</h1>
                     <p class="text-black-50">A clean and simple interface to organize your favourite websites. Open a
@@ -64,12 +65,13 @@
                     <div class="img-app">
                         <img src="images/illustration-hero.svg" class="img-fluid" alt="features">
                     </div>
-                    <div class="img-sombra">&nbsp;</div>
+                    <div class="img-sombra rounded-pill bg-primary">&nbsp;</div>
                 </section>
             </div>
 
         </section>
-        <section class="container text-center">
+        <!-- FEATURES -->
+        <section class="container text-center mt-5">
             <div class="row justify-content-center">
                 <div class="col-6">
                     <a name="features"></a>
@@ -105,7 +107,7 @@
                                 <div class="img-feature">
                                     <img src="images/illustration-features-tab-1.svg" class="img-fluid" alt="features">
                                 </div>
-                                <div class="sombra-feature">&nbsp;</div>
+                                <div class="sombra-feature rounded-pill bg-primary">&nbsp;</div>
                             </section>
 
                             <section class="col-12 col-lg-6 mb-3 mt-5 text-center text-lg-start">
@@ -128,7 +130,7 @@
                                 <div class="img-feature">
                                     <img src="images/illustration-features-tab-2.svg" class="img-fluid" alt="features">
                                 </div>
-                                <div class="sombra-feature">&nbsp;</div>
+                                <div class="sombra-feature rounded-pill bg-primary">&nbsp;</div>
                             </section>
 
                             <section class="col-12 col-lg-6 mb-3 mt-5 text-center text-lg-start">
@@ -150,7 +152,7 @@
                                 <div class="img-feature">
                                     <img src="images/illustration-features-tab-3.svg" class="img-fluid" alt="features">
                                 </div>
-                                <div class="sombra-feature">&nbsp;</div>
+                                <div class="sombra-feature rounded-pill bg-primary">&nbsp;</div>
                             </section>
 
                             <section class="col-12 col-lg-6 mb-3 mt-5 text-center text-lg-start">
@@ -169,10 +171,10 @@
             </div>
 
         </section>
-        <section class="container">
+        <!-- DOWNLOADS -->
+        <section class="container mt-5">
             <div class="row justify-content-center">
                 <div class="col-6 text-center">
-                    <a name="features"></a>
                     <h1>Download the extension</h1>
                     <p class="text-black-50">We've got more browsers in the pipeline. Please do let us know if you've
                         got a favourite you'd like us to prioritize.</p>
@@ -180,9 +182,10 @@
                 </div>
             </div>
 
-            <div class="cards-custom text-center d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-start">
-                
-                <div class="col-3 me-3 pt-5 pb-3 mb-3 border rounded shadow-sm" style="width: 15rem;">
+            <div
+                class="cards-custom text-center d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-start">
+
+                <div class="col-3 me-3 pt-5 pb-3 mb-3 rounded shadow" style="width: 15rem;">
                     <img src="images/logo-chrome.svg" class="mb-3" alt="...">
                     <div class="">
                         <h5 class="mt-3">Add to Chrome</h5>
@@ -192,7 +195,7 @@
                     </div>
                 </div>
 
-                <div class="col-3 me-3 pt-5 pb-3 mb-3 border rounded shadow-sm" style="width: 15rem;">
+                <div class="col-3 me-3 pt-5 pb-3 mb-3 rounded shadow" style="width: 15rem;">
                     <img src="images/logo-firefox.svg" class="mb-3" alt="...">
                     <div class="">
                         <h5 class="mt-3">Add to Firefox</h5>
@@ -202,7 +205,7 @@
                     </div>
                 </div>
 
-                <div class="col-3 me-3 pt-5 pb-3 mb-3 border rounded shadow-sm" style="width: 15rem;">
+                <div class="col-3 me-3 pt-5 pb-3 mb-3 rounded shadow" style="width: 15rem;">
                     <img src="images/logo-opera.svg" class="mb-3" alt="...">
                     <div class="">
                         <h5 class="mt-3">Add to Opera</h5>
@@ -215,6 +218,76 @@
             </div>
 
 
+        </section>
+        <!-- FAQs-->
+        <section class="container mt-5">
+            <div class="row justify-content-center mb-3">
+                <div class="col-6 text-center">
+                    <h1>Frequently Asked Questions</h1>
+                    <p class="text-black-50">Here are some of our FAQs. If you have any other questions you'd like
+                        answered please feel free to email us.</p>
+
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="accordion accordion-flush col-6 border-top border-bottom" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                What is Bookmark?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aut illum voluptas. Magni perspiciatis qui pariatur eius quos, veniam sequi dolorum repellendus odio sunt ipsum rem ratione tenetur nulla laboriosam.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                aria-controls="flush-collapseTwo">
+                                How can I request a new browser?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo voluptates tenetur quis dolorem quasi facere eligendi nulla fuga, omnis consectetur odio eos quos modi quisquam! Error distinctio quos ipsam unde.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                aria-controls="flush-collapseThree">
+                                Is there a mobile app?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium voluptas incidunt ducimus aspernatur soluta nobis, amet ipsum excepturi delectus sed explicabo, ullam earum! Dolor assumenda velit suscipit, dolorem in quibusdam.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                aria-controls="flush-collapseFour">
+                                What about other Chromium browsers?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseFour" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus alias ad fuga deleniti, est repudiandae saepe itaque distinctio consequatur. Voluptate quas sunt esse, velit distinctio cumque magni unde commodi quos!</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-4">
+                <button type="button" class="btn btn-primary w-auto">More Info</button>                    
+            </div>
         </section>
     </main>
 
