Ejercicio 5 IN PROGRESS

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- FRONT PAGE -->
         <section class="container mt-5">
             <div class="row justify-content-center align-items-center">
-                <section class="col-12 col-lg-6 order-2 order-lg-1 mb-3 text-center text-lg-start">
+                <section class="col-12 col-lg-6 order-2 order-lg-1 mb-3 mt-5 mt-lg-0 text-center text-lg-start">
                     <h1>A Simple Bookmark Manager</h1>
                     <p class="text-black-50">A clean and simple interface to organize your favourite websites. Open a
                         new browser tab and see your sites load instantly. Try it for free.</p>
@@ -73,7 +73,7 @@
         <!-- FEATURES -->
         <section class="container text-center mt-5">
             <div class="row justify-content-center">
-                <div class="col-6">
+                <div class="col-lg-6">
                     <a name="features"></a>
                     <h1>Features</h1>
                     <p class="text-black-50">Our aim is to make it quick and easy for you to access your favourite
@@ -116,7 +116,7 @@
                                     drag-and-drop interface gives you complete control over how you manage your
                                     favourite sites.</p>
                                 <div>
-                                    <button type="button" class="btn btn-primary shadow-sm me-2">More Info</button>
+                                    <button type="button" class="btn btn-primary shadow-sm me-2 d-none d-lg-block">More Info</button>
 
                                 </div>
                             </section>
@@ -138,7 +138,7 @@
                                 <p class="text-black-50">Our powerful search feature will help you find saved sites in
                                     no time at all. No need to trawi through all of your bookmarks.</p>
                                 <div>
-                                    <button type="button" class="btn btn-primary shadow-sm me-2">More Info</button>
+                                    <button type="button" class="btn btn-primary shadow-sm me-2 d-none d-lg-block">More Info</button>
 
                                 </div>
                             </section>
@@ -160,7 +160,7 @@
                                 <p class="text-black-50">Easily share your bookmarks and collections with other. Create
                                     a shareable link that you can send at the click of a button.</p>
                                 <div>
-                                    <button type="button" class="btn btn-primary shadow-sm me-2">More Info</button>
+                                    <button type="button" class="btn btn-primary shadow-sm me-2 d-none d-lg-block">More Info</button>
 
                                 </div>
                             </section>
@@ -174,7 +174,7 @@
         <!-- DOWNLOADS -->
         <section class="container mt-5">
             <div class="row justify-content-center">
-                <div class="col-6 text-center">
+                <div class="col-lg-6 text-center">
                     <h1>Download the extension</h1>
                     <p class="text-black-50">We've got more browsers in the pipeline. Please do let us know if you've
                         got a favourite you'd like us to prioritize.</p>
@@ -222,7 +222,7 @@
         <!-- FAQs-->
         <section class="container mt-5">
             <div class="row justify-content-center mb-3">
-                <div class="col-6 text-center">
+                <div class="col-lg-6 text-center">
                     <h1>Frequently Asked Questions</h1>
                     <p class="text-black-50">Here are some of our FAQs. If you have any other questions you'd like
                         answered please feel free to email us.</p>
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="accordion accordion-flush col-6 border-top border-bottom" id="accordionFlushExample">
+                <div class="accordion accordion-flush col-lg-6 border-top border-bottom" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
