--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
                                     <a class="nav-link text-dark ps-3 pe-3" aria-current="page" href="#">PRICING</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark ps-3 pe-3" aria-current="page" href="#footer">CONTACT</a>
+                                    <a class="nav-link text-dark ps-3 pe-3" aria-current="page"
+                                        href="#footer">CONTACT</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark ps-3 pe-3" aria-current="page" href="#"><button
-                                            type="button" class="btn btn-danger shadow-sm">LOGIN</button></a>
+                                            type="button"
+                                            class="btn btn-danger shadow-sm border border-3 border-danger">LOGIN</button></a>
                                 </li>
                             </ul>
                         </div>
@@ -57,9 +59,8 @@
                     <p class="text-black-50">A clean and simple interface to organize your favourite websites. Open a
                         new browser tab and see your sites load instantly. Try it for free.</p>
                     <div>
-                        <button type="button" class="btn btn-primary shadow-sm me-2">Get it on Chrome</button>
-                        <button type="button" class="btn shadow-sm btn-light">Get it on Firefox</button>
-
+                        <button type="button" class="btn btn-primary shadow-sm me-2 border-2">Get it on Chrome</button>
+                        <button type="button" class="btn shadow-sm btn-light border-2">Get it on Firefox</button>
                     </div>
                 </section>
                 <section class="col-12 col-lg-6 order-1 order-lg-2 contenedor-imgs mb-5">
@@ -117,7 +118,8 @@
                                     drag-and-drop interface gives you complete control over how you manage your
                                     favourite sites.</p>
                                 <div>
-                                    <button type="button" class="btn btn-primary shadow-sm me-2 d-none d-lg-block">More
+                                    <button type="button"
+                                        class="btn btn-primary shadow-sm me-2 d-none d-lg-block border-2">More
                                         Info</button>
 
                                 </div>
@@ -140,7 +142,8 @@
                                 <p class="text-black-50">Our powerful search feature will help you find saved sites in
                                     no time at all. No need to trawi through all of your bookmarks.</p>
                                 <div>
-                                    <button type="button" class="btn btn-primary shadow-sm me-2 d-none d-lg-block">More
+                                    <button type="button"
+                                        class="btn btn-primary shadow-sm me-2 d-none d-lg-block border-2">More
                                         Info</button>
 
                                 </div>
@@ -163,7 +166,8 @@
                                 <p class="text-black-50">Easily share your bookmarks and collections with other. Create
                                     a shareable link that you can send at the click of a button.</p>
                                 <div>
-                                    <button type="button" class="btn btn-primary shadow-sm me-2 d-none d-lg-block">More
+                                    <button type="button"
+                                        class="btn btn-primary shadow-sm me-2 d-none d-lg-block border-2">More
                                         Info</button>
 
                                 </div>
@@ -195,7 +199,7 @@
                         <h5 class="mt-3">Add to Chrome</h5>
                         <p class="mb-3 text-black-50">Minimum version 62</p>
                         <img class="w-100 mb-3" src="images/bg-dots.svg" alt="dots line">
-                        <a href="#" class="btn btn-primary w-80">Add & Install Extension</a>
+                        <a href="#" class="btn btn-primary w-80 border-2">Add & Install Extension</a>
                     </div>
                 </div>
 
@@ -205,7 +209,7 @@
                         <h5 class="mt-3">Add to Firefox</h5>
                         <p class="mb-3 text-black-50">Minimum version 55</p>
                         <img class="w-100 mb-3" src="images/bg-dots.svg" alt="dots line">
-                        <a href="#" class="btn btn-primary w-80">Add & Install Extension</a>
+                        <a href="#" class="btn btn-primary w-80 border-2">Add & Install Extension</a>
                     </div>
                 </div>
 
@@ -215,7 +219,7 @@
                         <h5 class="mt-3">Add to Opera</h5>
                         <p class="mb-3 text-black-50">Minimum version 46</p>
                         <img class="w-100 mb-3" src="images/bg-dots.svg" alt="dots line">
-                        <a href="#" class="btn btn-primary w-80">Add & Install Extension</a>
+                        <a href="#" class="btn btn-primary w-80 border-2">Add & Install Extension</a>
                     </div>
                 </div>
 
@@ -299,7 +303,7 @@
                 </div>
             </div>
             <div class="row justify-content-center mt-4">
-                <button type="button" class="btn btn-primary w-auto">More Info</button>
+                <button type="button" class="btn btn-primary w-auto border-2">More Info</button>
             </div>
         </section>
         <!-- FOOTER -->
@@ -316,52 +320,60 @@
 
                 <form class="row justify-content-center align-items-start mt-4 needs-validation" novalidate>
                     <div class="col-lg-4 col-10 ps-0 pe-0">
-                        <input type="email" class="form-control p-3"
-                            id="user_email" name="user_email" placeholder="Enter your email address" 
-                            aria-describedby="emailHelp" required>
-                            <div class="invalid-feedback text-light bg-danger rounded-bottom mt-0 p-2 text-start">
-                                Whoops, make sure it's an email
-                            </div>    
+                        <input type="email" class="form-control p-3" id="user_email" name="user_email"
+                            placeholder="Enter your email address" aria-describedby="emailHelp" required>
+                        <div class="invalid-feedback text-light bg-danger rounded-bottom mt-0 p-2 text-start">
+                            Whoops, make sure it's an email
+                        </div>
                     </div>
 
-                    <button type="submit" class="btn btn-secondary col-lg-2 col-10 mt-3 mt-lg-0 ms-lg-3 p-3 text-white">Contact
+                    <button type="submit"
+                        class="btn btn-secondary col-lg-2 col-10 mt-3 mt-lg-0 ms-lg-3 p-3 text-white border-2">Contact
                         Us</button>
 
                 </form>
             </div>
             <!-- NAVBAR + CONTACT-->
             <div class="container-fluid mt-5 navbar-and-contacts">
-                <div class="container p-4">
-                    <div class="row justify-content-center text-center">
-                        <ul class="col-12 col-lg-9 mb-0">
-                            <li class="d-block d-lg-inline m-4 m-lg-0">
-                                <a class="text-decoration-none" href="#"><img src="images/logo-bookmark-white.png" alt="BOOKMARK LOGO"
-                                        class="pb-1"></a>
-                            </li>
-                            <li class="d-block d-lg-inline m-4 m-lg-0">
-                                <a class="text-light ps-3 pe-3 text-decoration-none" href="#features">FEATURES</a>
-                            </li>
-                            <li class="d-block d-lg-inline m-4 m-lg-0">
-                                <a class="text-light ps-3 pe-3 text-decoration-none" href="#">PRICING</a>
-                            </li>
-                            <li class="d-block d-lg-inline m-4 m-lg-0">
-                                <a class="text-light ps-3 pe-3 text-decoration-none" href="#footer">CONTACT</a>
-                            </li>
+                <div class="container pt-4 pb-4">
+                    <div class="row text-center">
+                        <ul class="col-12 col-lg-9 mb-0 p-0">
+                            <div class="container p-0 justify-content-start">
+                                <div class="row justify-content-center justify-content-lg-start">
+                                    <li class="col-12 col-lg-3 m-3 m-lg-0">
+                                        <a class="text-decoration-none" href="#"><img
+                                                src="images/logo-bookmark-white.png" alt="BOOKMARK LOGO"
+                                                class="pb-1"></a>
+                                    </li>
+                                    <li class="col-12 col-lg-2 m-3 m-lg-0">
+                                        <a class="text-light ps-3 pe-3 text-decoration-none item-menu-footer"
+                                            href="#features">FEATURES</a>
+                                    </li>
+                                    <li class="col-12 col-lg-2 m-3 m-lg-0">
+                                        <a class="text-light ps-3 pe-3 text-decoration-none item-menu-footer"
+                                            href="#">PRICING</a>
+                                    </li>
+                                    <li class="col-12 col-lg-2 m-3 m-lg-0">
+                                        <a class="text-light ps-3 pe-3 text-decoration-none item-menu-footer"
+                                            href="#footer">CONTACT</a>
+                                    </li>
+                                </div>
+                            </div>
                         </ul>
 
-                        <ul class="col-12 col-lg-2 offset-lg-1 mb-0 mt-3 mt-lg-0">
+                        <ul class="col-12 col-lg-2 offset-lg-1 mb-0 mt-3 mt-lg-0 p-0">
                             <li class="d-inline">
-                                <a class="ps-0 pe-3" href="#"><img src="/images/icon-facebook.svg" alt="Facebook"></a>
+                                <a class="ps-0 pe-3" href="#"><span class="facebook-icon"></span></a>
                             </li>
                             <li class="d-inline">
-                                <a class="ps-3 pe-0" href="#"><img src="/images/icon-twitter.svg" alt="Facebook"></a>
+                                <a class="ps-3 pe-0 " href="#"><span class="twitter-icon"></span></a>
                             </li>
                         </ul>
 
                     </div>
                 </div>
             </div>
-            </div>
+            <!--</div>-->
         </footer>
     </main>
 
@@ -370,27 +382,26 @@
     <!-- SCRIPT PARA VALIDACIÓN FORMULARIO -->
     <script>
         // Example starter JavaScript for disabling form submissions if there are invalid fields
-(function () {
-  'use strict'
+        (function () {
+            'use strict'
 
-  // Fetch all the forms we want to apply custom Bootstrap validation styles to
-  var forms = document.querySelectorAll('.needs-validation')
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.querySelectorAll('.needs-validation')
 
-  // Loop over them and prevent submission
-  Array.prototype.slice.call(forms)
-    .forEach(function (form) {
-      form.addEventListener('submit', function (event) {
-        if (!form.checkValidity()) {
-          event.preventDefault()
-          event.stopPropagation()
-        }
+            // Loop over them and prevent submission
+            Array.prototype.slice.call(forms)
+                .forEach(function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                            event.preventDefault()
+                            event.stopPropagation()
+                        }
 
-        form.classList.add('was-validated')
-      }, false)
-    })
-})()
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+        })()
     </script>
-
 </body>
 
 </html>
