--- a/index.html
+++ b/index.html
@@ -186,12 +186,10 @@
                     <h1>Download the extension</h1>
                     <p class="text-black-50">We've got more browsers in the pipeline. Please do let us know if you've
                         got a favourite you'd like us to prioritize.</p>
-
                 </div>
             </div>
-
-            <div
-                class="cards-custom text-center d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-start">
+            
+            <div class="cards-custom text-center d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-lg-start">
 
                 <div class="col-3 me-3 pt-5 pb-3 mb-3 rounded shadow" style="width: 15rem;">
                     <img src="images/logo-chrome.svg" class="mb-3" alt="...">
@@ -224,8 +222,6 @@
                 </div>
 
             </div>
-
-
         </section>
         <!-- FAQs-->
         <section class="container mt-5 mb-5">
